fix: Display only forms not associated or visible for my programs core #871

--- a/media/com_emundus_vue/app_emundus.css
+++ b/media/com_emundus_vue/app_emundus.css
@@ -3954,18 +3954,18 @@ hr.system-pagebreak { border: #808080FF dashed 1px; color: #808080FF; }
     border: 0;
   }
 
-#add-program[data-v-928d1f8b] {
+#add-program[data-v-701997dd] {
   height: 24px;
   width: 24px;
   padding: unset;
   transition: transform 0.1s ease-in-out;
 }
-.em-color-round[data-v-928d1f8b] {
+.em-color-round[data-v-701997dd] {
   height: 30px;
   width: 30px;
   border-radius: 50%;
 }
-.modal-date-picker[data-v-928d1f8b] {
+.modal-date-picker[data-v-701997dd] {
   transform: translate(-50%, -50%);
   box-shadow: 0 0 9999px 9999px rgb(0 0 0 / 50%);
 }
